k8sexample/apple/apple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: apple
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
