k8sexample/apple/apple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: apple-service
                port:
                  number: 80
